# neo-serial-gui

./: .gitignore  README.md  README_CARD.md
core/parameter/: parameter_card.cpp  parameter_card.h
core/session/: session.cpp  session.h
core/transport/: transport.h
core/transport/uart/: uart_transport.cpp  uart_transport.h
docs/: 1.md  callback.md  cards.md  chart_perf.md  session.md
gui/neo-serial-gui/: CMakeLists.txt  Main.qml  card_bridge.cpp  card_bridge.h  main.cpp  session_bridge.cpp  session_bridge.h
gui/neo-serial-gui/modules/: AddMonitorCardPopup.qml  ControlCardPopup.qml  MainWindow.qml  ThemePopup.qml
gui/neo-serial-gui/modules/controls/: ColorField.qml  LightButton.qml  LightCheckBox.qml  LightComboBox.qml  LightRadio.qml  LightSpinBox.qml  LightTextField.qml  PrimaryButton.qml
tester/: parameter_card_tester.cpp  uart_session_tester.cpp  uart_tester.cpp  uart_transport_tester.cpp
